<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/title_info_car"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:paddingVertical="8dp"
                android:text="@string/title_license_plate_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCarId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:textColor="@color/black"
                tools:text=": 59-V1 79379" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="#D0D0D0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:paddingVertical="8dp"
                android:text="@string/title_current_location"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:text="@string/title_receiving_car"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="#D0D0D0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:paddingVertical="8dp"
                android:text="@string/title_current_state"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:text="@string/title_state_car_care_progress"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>