<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.appplication.CarCareInfoActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_register_car_care"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/title_license_plate_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <EditText
        android:id="@+id/carIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Biển số xe"
        android:inputType="text|textCapCharacters"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="@id/tvCarId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCarId"
        app:layout_constraintTop_toTopOf="@id/tvCarId" />

    <TextView
        android:id="@+id/tvReceiptDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Ngày nhận:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvCarId"
        app:layout_constraintTop_toBottomOf="@id/tvCarId" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:focusable="false"
        android:hint="Chọn ngày"
        android:padding="12dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="@id/tvReceiptDate"
        app:layout_constraintEnd_toEndOf="@id/carIdEditText"
        app:layout_constraintStart_toStartOf="@id/carIdEditText"
        app:layout_constraintTop_toTopOf="@id/tvReceiptDate" />

    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Dịch vụ: "
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvCarId"
        app:layout_constraintTop_toBottomOf="@id/tvReceiptDate" />

    <CheckBox
        android:id="@+id/cbCarWash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/service_wash"
        app:layout_constraintStart_toStartOf="@id/tvService"
        app:layout_constraintTop_toBottomOf="@id/tvService" />

    <CheckBox
        android:id="@+id/cbChangeOil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/service_oil"
        app:layout_constraintStart_toStartOf="@id/tvService"
        app:layout_constraintTop_toBottomOf="@id/cbCarWash" />

    <CheckBox
        android:id="@+id/cbHoldCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/service_hold"
        app:layout_constraintStart_toStartOf="@id/tvService"
        app:layout_constraintTop_toBottomOf="@id/cbChangeOil" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/item_car_care_info" />

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/emoty_car_care" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty_car_care"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="#EFEFEF"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/title_return"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/registerCarCareButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/title_confirm"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>